syntax = "proto3";

package greetpb;
option go_package = "greetpb";

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetEveryoneRequest {
  Greeting greeting = 1;
}

message GreetEveryoneResponse {
  string result = 1;
}

service GreetService {
  rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse){};
}